--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
     {% block css %}{% endblock css %}
 </head>
 <body>
+    <header id="main-navigation">
+        <h1><a href="{% url 'home' %}">Mahdi blog</a></h1>
+        <nav><a href="{% url 'posts' %}">All posts</a></nav>
+    </header>
     {% block content %}{% endblock content %}
 </body>
 </html>
