blog project completed, but it needs some extra works

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -19,7 +19,9 @@
     <section id="latest_posts">
         <h2>My Latest Thoughts</h2>
         <ul>
-            {% include "blog/includes/post.html" %}
+            {% for post in posts %}
+                {% include "blog/includes/post.html" %} 
+            {% endfor %}
         </ul>
     </section>
 
