--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,12 +2,12 @@
 
 <li>
     <article class="post">
-        <a href="{% url 'post_details' 'post-1' %}">
-            <img src="{% static 'blog/images/mahdi_1.jpg' %}" alt="blog image">
+        <a href="{% url 'post_details' post.slug %}">
+            <img src="{{ post.image }}" alt="{{ post.title }}">
             
             <div class="post__content">
                 <h3>{{ post.title }}</h3>
-                <p>{% lorem 1 b random %}</p>
+                <p>{{ post.excerpt }}</p>
             </div>
         </a>
     </article>
