--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -1,9 +1,7 @@
-{% load static %}
-
 <li>
     <article class="post">
         <a href="{% url 'post_details' post.slug %}">
-            <img src="{{ post.image }}" alt="{{ post.title }}">
+            <img src="{{ post.image.url }}" alt="{{ post.title }}">
             
             <div class="post__content">
                 <h3>{{ post.title }}</h3>
