--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -9,7 +9,7 @@
 <section id="summary">
     <h2>{{ post.title }}</h2>
     <article>
-        <img src="{{ post.image }}" alt="{{ post.title }}">
+        <img src="{{ post.image.url }}" alt="{{ post.title }}">
         <address>by {{ post.author }}</address>
         <div>
             last updated on <time>{{ post.date }}</time>
