--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,10 @@
 <body>
     <header id="main-navigation">
         <h1><a href="{% url 'home' %}">Mahdi blog</a></h1>
-        <nav><a href="{% url 'posts' %}">All posts</a></nav>
+        <nav>
+            <a href="{% url 'saved_posts' %}">Saved Posts</a>
+            <a href="{% url 'posts' %}" style="margin-left: 2rem;">All posts</a>
+        </nav>
     </header>
     {% block content %}{% endblock content %}
 </body>
