--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <header id="main-navigation">
         <h1><a href="{% url 'home' %}">Mahdi blog</a></h1>
         <nav>
-            <a href="{% url 'saved_posts' %}">Saved Posts</a>
+            <a href="{% url 'stored_posts' %}">Saved Posts</a>
             <a href="{% url 'posts' %}" style="margin-left: 2rem;">All posts</a>
         </nav>
     </header>
